--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 
 # DFX CANISTER ENVIRONMENT VARIABLES
 DFX_VERSION='0.18.0'
-DFX_NETWORK='local'
-CANISTER_CANDID_PATH_BACKEND_CANISTER='/root/Blockathon2/icp_react_template/.dfx/local/canisters/backend_canister/backend_canister.did'
+DFX_NETWORK='ic'
+CANISTER_CANDID_PATH_BACKEND_CANISTER='/root/Blockathon2/icp_react_template/.dfx/ic/canisters/backend_canister/backend_canister.did'
 CANISTER_ID_INTERNET_IDENTITY='rdmx6-jaaaa-aaaaa-aaadq-cai'
-CANISTER_ID_FRONTEND_CANISTER='bd3sg-teaaa-aaaaa-qaaba-cai'
-CANISTER_ID_BACKEND_CANISTER='bkyz2-fmaaa-aaaaa-qaaaq-cai'
-CANISTER_ID='bd3sg-teaaa-aaaaa-qaaba-cai'
-CANISTER_CANDID_PATH='/root/Blockathon2/icp_react_template/.dfx/local/canisters/frontend_canister/assetstorage.did'
+CANISTER_ID_FRONTEND_CANISTER='hour6-iyaaa-aaaal-qdteq-cai'
+CANISTER_ID_BACKEND_CANISTER='hjvxk-faaaa-aaaal-qdtea-cai'
+CANISTER_ID='hour6-iyaaa-aaaal-qdteq-cai'
+CANISTER_CANDID_PATH='/root/Blockathon2/icp_react_template/.dfx/ic/canisters/frontend_canister/assetstorage.did'
 # END DFX CANISTER ENVIRONMENT VARIABLES
